@@ -50,6 +50,7 @@ Changes in Bitbake 1.9.x:
 	- Sort digraph output to make builds more reproducible
 	- Split expandKeys into two for loops to benefit from the expand_cache (12% speedup)
 	- runqueue.py: Fix idepends handling to avoid dependency errors
+	- Clear the terminal TOSTOP flag if set (and warn the user)
 
 Changes in Bitbake 1.8.0:
 	- Release 1.7.x as a stable series
